tests/fixtures/negative/002_missing_closing_paren.js
// Expected error: missing closing parenthesis
if (x {
  console.log("hello");
}
